fixed event box overlap issue

--- a/src/components/main/dashboard/events/event-box.scss
+++ b/src/components/main/dashboard/events/event-box.scss
@@ -10,7 +10,7 @@
     display: inline-block;
     background-color: rgba($green, 0.8);
     width: 300px;
-    height: 370px;
+    height: 390px;
     margin: 5px 15px;
     padding: 10px 20px 0;
     border-radius: 8px;
@@ -26,7 +26,7 @@
         margin-right: 5px; 
         font-size: 20px;
         width: 380px;
-        height: 435px;
+        height: 455px;
     }
     button {
         border: none;
